package ru.Timur;

//Позволяет объекту краться
public interface Sneakable {
    void sneak(String location);
}
